  Changes:
    - Various UX tweaks:
    - Using the "confirm" control will confirm dialogs rather than cancel them, paralleling the behavior of vanilla Factorio guis. Pressing "escape" will still cancel.
    - The project list window (previously staged build window) will automatically close after selecting a project.
    - Removed error messages when using certain hotkeys when not in a project.
    - Made project list window visually cleaner.
  Bugfixes:
    - Fixed migrating from a version earlier than 0.17.0
    - Removed extra .txt file extension from blueprint book export
---------------------------------------------------------------------------------------------------
Version: 0.22.8
Date: 2023-07-21
  Bugfixes:
    - Fixed potential issue with handling previews of modded entities
---------------------------------------------------------------------------------------------------
Version: 0.22.7
Date: 2023-07-06
  Bugfixes:
    - Fix splitter priorities when pasting a flipped blueprint.
---------------------------------------------------------------------------------------------------
Version: 0.22.6
Date: 2023-06-02
  Bugfixes:
    - Fixed saving grid settings when the first entity in the blueprint is filtered out (e.g. via blacklist).
---------------------------------------------------------------------------------------------------
Version: 0.22.5
Date: 2023-05-27
  Bugfixes:
    - Fixed not being able to select rail previews with the stage move tool
  Locale:
    - Fix locale issue with blueprint book creation task
---------------------------------------------------------------------------------------------------
Version: 0.22.4
Date: 2023-05-22
  Bugfixes:
    - Fix extra previews being created for train entities
---------------------------------------------------------------------------------------------------
Version: 0.22.3
Date: 2023-05-22
  Bugfixes:
    - Fix issue when blueprint pasting entities over previews.